--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h2>Это тестовая страница</h2>
-</body>
+    {% for todo in todo_list %}
+        <h3>{{ todo.text }} - {{ todo.created_at }}</h3>
+    {% endfor %}
 </html>
