--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -34,8 +34,8 @@
                     <div class="todo_item_footer">
                     <p>{{ todo.created_at}}</p>
                     <div class="action_buttons">
-                        <img src="./icons/unmarked.png.png" />
-                        <img src="./icons/delete.png.png" />
+                        <img src="{% static './icons/unmarked.png.png' %}" />
+                        <img src="{% static './icons/delete.png.png' %}" />
                     </div>
                 </div>
             </div>
