--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -39,7 +39,7 @@
                     <p>{{ todo.created_at}}</p>
                     <div class="action_buttons">
                         <img src="{% static './icons/unmarked.png.png' %}" />
-                        <img src="{% static './icons/delete.png.png' %}" />
+                        <a href="{% url 'delete-todo' todo.id %}"><img src="{% static './icons/delete.png.png' %}" /></a>
                     </div>
                 </div>
             </div>
