--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -27,7 +27,12 @@
         <div class="todo_container">
 
             {% for todo in todo_list %}
-            <div class="todo_item">
+            <div class="todo_item
+                {% if todo.is_favorite %}
+                    marked
+                {% endif %}
+            
+            ">
                 <div class="todo_item_header">
                     <label class="checkbox_container">
                         <input type="checkbox" />
@@ -38,7 +43,11 @@
                     <div class="todo_item_footer">
                     <p>{{ todo.created_at}}</p>
                     <div class="action_buttons">
-                        <img src="{% static './icons/unmarked.png.png' %}" />
+                        {% if todo.is_favorite %}
+                            <a href="{% url 'mark-todo' todo.id %}"><img src="{% static './icons/marked.png.png' %}" /></a>
+                        {% else %}
+                            <a href="{% url 'mark-todo' todo.id %}"><img src="{% static './icons/unmarked.png.png' %}" /></a>
+                        {% endif %}    
                         <a href="{% url 'delete-todo' todo.id %}"><img src="{% static './icons/delete.png.png' %}" /></a>
                     </div>
                 </div>
